# GitLaw

./: .dockerignore  .gitignore  AGENTS.md  AI_FEEDBACK_LOOP_SPRINT_DE.md  BAO_DEMO_SKRIPT_2026-05-06.md  BAO_KI_DATENVERARBEITUNG_ANTWORT.md  BAO_MVP_HANDOFF_DE.md  CHANGELOG.md  CITIZEN_DETAILED_TEST_PLAN_DE.md  CITIZEN_SCALABILITY_PLAN_DE.md  CLAUDE.md  GITLAW_12_MONTH_EXECUTION_SEQUENCE_DE.md  GITLAW_90_DAY_SPRINT_BOARD_DE.md  GITLAW_AGENT_ARCHITECTURE_DE.md  GITLAW_AGENT_CODE_MAP_DE.md  GITLAW_AGENT_EVAL_MATRIX_DE.md  GITLAW_AGENT_EVAL_SUITE_DE.md  GITLAW_AGENT_IMPROVEMENTS_DE.md  GITLAW_AGENT_MANUAL_TEST_RUN_SHEET_DE.md  GITLAW_AGENT_VISUAL_MAP_DE.md  GITLAW_COMPANY_ARCHITECTURE_DE.md  GITLAW_COMPANY_THESIS_DE.md  GITLAW_CREWAI_AGENTS.yaml  GITLAW_CREWAI_AUTOMATION_PROMPT_EN.md  GITLAW_CREWAI_TASKS.yaml  GITLAW_EXECUTABLE_AGENT_CHECKLIST_DE.md  GITLAW_EXECUTION_PLAN_DE.md  GITLAW_FOUNDER_ROADMAP_DE.md  GITLAW_NEXT_PRODUCTION_SPRINT_DE.md  GITLAW_PILOT_OFFER_DE.md  GITLAW_PILOT_READINESS_REPORT_DE.md  GITLAW_PRODUCTION_GAP_SHEET_DE.md  P1_SPRINT_BOARD_DE.md  P2_OCR_TRANSLATION_SPRINT_DE.md  P2_SPRINT_BOARD_DE.md  PRODUCTION_READINESS_PLAN_DE.md  README.md  SCALABLE_PRODUCTION_PATH_DE.md  SPRINT_1_PLAN.md  UPLOAD_FLOW_SPRINT_DE.md  (+2 more)
api/: ask-pro.ts  ask.ts  ocr.ts  package-lock.json  package.json
gitlaw_mcp/: ARCHITECTURE.md  Dockerfile  Dockerfile.fly  README.md  __init__.py  citations.py  demo.py  graph_builder.py  graph_viewer.html  pyproject.toml  server.py
gitlaw_mcp/data/: citation_graph_laws.json
gitlaw_mcp/tests/: cases.json  eval_report.json  test_eval.py
laws/: 1-dm-goldmünzg.md  aabg.md  aabgebv.md  aappo.md  aarkzustano.md  aaübertrano.md  aaüg.md  aaügerstv.md  aaügändg_2.md  abag.md  abamverwv.md  abbergv.md  abbv.md  abfaev.md  abfbeauftrv_2017.md  abfklärv_2017.md  abfverbrbußv.md  abfverbrg_2007.md  abgg.md  abgg10u11abschnabestbek.md  abgrv_1985.md  abrstv.md  abschlagsv.md  absfondsforstauflg.md  absfondslwauflg.md  abwag.md  abwassermeistprv.md  abwutechausbv.md  abwv.md  abzusforstabkpolg.md  abzuspolabkg.md  adg.md  (+1816 more)
(+4299 files in other folders)
